Import of LICHTKIND/Kephra-0.4.2_14 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_14
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_14.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/appbars.yml
+++ b/share/config/interface/appbars.yml
@@ -29,11 +29,13 @@ main_toolbar:
 searchbar:
  - item view-toolbar-search
  - combobox find 180
- - item find-mark-all#
  - item find-prev
  - item find-next
  -
  - item goto-last-edit
+ -
+ - item marker-goto-prev
+ - item marker-goto-next
  -
  - item goto-line
  - item view-dialog-find
