--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -172,7 +172,7 @@
 				up = Kephra::Edit::Goto::prev_related_brace()
 			</brace>
 			last-edit = Kephra::Edit::Goto::last_edit()
-			line = Kephra::Edit::Goto::line_nr()
+			line = Kephra::Edit::Goto::line()
 		</goto>
 		<bookmark>
 			<goto>
@@ -201,12 +201,24 @@
 			</toggle>
 			delete-all = Kephra::Edit::Marker::delete_all_bookmarks()
 		</bookmark>
+		<marker>
+			goto-prev = Kephra::Edit::Marker::goto_prev_marker()
+			goto-next = Kephra::Edit::Marker::goto_next_marker()
+			toggle-here = Kephra::Edit::Marker::toggle_marker()
+			del-doc = Kephra::Edit::Marker::delete_all_marker_in_doc()
+			del-all = Kephra::Edit::Marker::delete_all_marker()
+		</marker>
 		<tool>
 			note = Kephra::App::Panel::Notepad::note()
 			note-selection = Kephra::App::Panel::Notepad::append_selection()
 			interpreter-run-document = Kephra::App::Panel::Output::run()
 			interpreter-stop-document = Kephra::App::Panel::Output::stop()
-			output-inc = Kephra::App::Panel::Output::display_inc()
+			<output>
+				inc = Kephra::App::Panel::Output::display_inc()
+				env = Kephra::App::Panel::Output::display_env()
+				selection-dec = Kephra::App::Panel::Output::display_selection_dec()
+				selection-hex = Kephra::App::Panel::Output::display_selection_hex()
+			</output>
 			choose-color = Kephra::Dialog::choose_color()
 		</tool>
 		<document>
@@ -719,6 +731,36 @@
 			last-edit = goto-last-edit.xpm
 			line = goto-line.xpm
 		</goto>
+		<marker>
+			goto-prev = find-previous.xpm
+			goto-next = find-next.xpm
+		</marker>
+		<bookmark>
+			<goto>
+				1 = bookmark1.xpm
+				2 = bookmark2.xpm
+				3 = bookmark3.xpm
+				4 = bookmark4.xpm
+				5 = bookmark5.xpm
+				6 = bookmark6.xpm
+				7 = bookmark7.xpm
+				8 = bookmark8.xpm
+				9 = bookmark9.xpm
+				0 = bookmark0.xpm
+			</goto>
+			<toggle>
+				1 = bookmark1.xpm
+				2 = bookmark2.xpm
+				3 = bookmark3.xpm
+				4 = bookmark4.xpm
+				5 = bookmark5.xpm
+				6 = bookmark6.xpm
+				7 = bookmark7.xpm
+				8 = bookmark8.xpm
+				9 = bookmark9.xpm
+				0 = bookmark0.xpm
+			</toggle>
+		</bookmark>
 		<view>
 			<dialog>
 				config = config-preferences.xpm
@@ -729,15 +771,10 @@
 			</dialog>
 			editpanel-line-wrap = line-wrap.xpm
 			panel-notepad = note.xpm
-			panel-output = console.xpm
-			toolbar-search = edit-delete.xpm
+			panel-output = output-panel.xpm
+			toolbar-search = panel-close.xpm
 			window-stay-on-top = stay-on-top.xpm
 		</view>
-		#has_ending = 1
-		#path = interface/icon/set/jenne/
-		#type = xpm
-		#use_path = 1
-		#use_file_type = 1
 	</icon>
 	<key>
 		app-exit = alt+q
@@ -844,6 +881,12 @@
 			last-edit = ctrl+shift+g
 			line = ctrl+g
 		</goto>
+		<marker>
+			goto-prev = ctrl+shift+m
+			goto-next = ctrl+m
+			toggle-here = ctrl+alt+m
+			del-doc = ctrl+alt+shift+m
+		</marker>
 		<bookmark>
 			<goto>
 				1 = ctrl+1
