--- a/share/config/localisation/cesky.conf
+++ b/share/config/localisation/cesky.conf
@@ -32,6 +32,7 @@
 			bookmark_goto = Goto Bookmark
 			bookmark_toggle = Toggle Bookmark
 			tools = Tools
+			tool_output = Output
 			document = Document
 			document_change = Change
 			document_convert = Convert
@@ -259,6 +260,13 @@
 			last-edit = Goto Last Edit
 			line = Goto Line Number  ...
 		</goto>
+		<marker>
+			goto-prev = Goto Previous Marker
+			goto-next = Goto Next Marker
+			toggle-here = Toggle Marker Here
+			del-doc = Delete Marker in Doc
+			del-all = Delete All Marker
+		</marker>
 		<bookmark>
 			<goto>
 				1 = 1
@@ -291,7 +299,12 @@
 			note-selection = Note Selection
 			interpreter-run-document = Run
 			interpreter-stop-document = Stop
-			output-inc = @INC
+			<output>
+				inc = @INC
+				env = %ENV
+				selection-dec = Selection in Dec
+				selection-hex = Selection in Hex
+			</output>
 			choose-color = Color Picker
 		</tool>
 		<document>
@@ -692,6 +705,13 @@
 			last-edit = jump to position of last change in this document
 			line = jump to line with chosen number
 		</goto>
+		<marker>
+			goto-prev = go to the previous marker (upwards) in this document
+			goto-next = go to the next marker (downwards) in this document
+			toggle-here = set a marker in current line or delete if already present
+			del-doc = delete marker just in the current document
+			del-all = delete marker in all open documents
+		</marker>
 		<bookmark>
 			<goto>
 				1 = go to bookmark number 1
@@ -721,10 +741,15 @@
 		</bookmark>
 		<tool>
 			note = jump to the notepad
-			note-selection = paste selected text into the notepad
+			note-selection = paste selected text on the end of the notepad
 			interpreter-run-document = run current programm and show result in output panel
 			interpreter-stop-document = stop the current running output panel process
-			output-inc = display the include pathes in the ouput panel
+			<output>
+				inc = display the include paths of the Perl Interpreter in the ouput panel
+				env = display the environment variables in the ouput panel
+				selection-dec = display selected text in decimal coding in the ouput panel
+				selection-hex = display selected text in hexadecimal coding in the ouput panel
+			</output>
 			choose-color = display text selection as color and choose a new from a rainbow
 		</tool>
 		<document>
