--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -32,6 +32,7 @@
 			bookmark_goto = Gehe Zu Lesezeichen
 			bookmark_toggle = Lesezeichen Umschalten
 			tools = Werkzeuge
+			tool_output = Ausgabe
 			document = Do&kument
 			document_change = Wähle
 			document_convert = Konvertieren
@@ -86,7 +87,7 @@
 			selection = Größe der Textauswahl oder prozentuale Position
 			syntaxmode = ändert den gewählten Syntaxmodus
 			codepage = Einstellungen der Kodierung
-			tab = Benutzung und Sichtbarkeit von Tabulatoren und Leerzeichen
+			tab = Benutzung und Sichtbarkeit von Tabulatoren (HT) und Leerzeichen (ST)
 			EOL = Änderung und Sichtbarkeit von der Zeilenendzeichen
 			message = Nachrichtenfeld, auch verschiedene Informationen zum Dokument
 		</help>
@@ -259,6 +260,13 @@
 			last-edit = Zur letzten Bearbeitung
 			line = Gehe Zu Zeile ...
 		</goto>
+		<marker>
+			goto-prev = Vorige Markierung
+			goto-next = Nächste Markierung
+			toggle-here = Markierung Umschalten
+			del-doc = Lösche im Dokument
+			del-all = Lösche Alle Markierungen
+		</marker>
 		<bookmark>
 			<goto>
 				1 = 1
@@ -288,10 +296,15 @@
 		</bookmark>
 		<tool>
 			note = Notiere
-			note-selection = Notiere Markierung
+			note-selection = Notiere Auswahl
 			interpreter-run-document = Start
 			interpreter-stop-document = Stop
-			output-inc = @INC
+			<output>
+				inc = @INC
+				env = %ENV
+				selection-dec = Auswahl in Dez
+				selection-hex = Auswahl in Hex
+			</output>
 			choose-color = Farbauswahl
 		</tool>
 		<document>
@@ -692,6 +705,13 @@
 			last-edit = springe zur Position der letzten Veränderung dieses Dokumentes
 			line = springe zur Zeile mit angegeben Nummer
 		</goto>
+		<marker>
+			goto-prev = springe zur vorigen Markierung (nach oben) in diesem Dokument
+			goto-next = springe zur nächsten Markierung (nach unten) in diesem Dokument
+			toggle-here = setze Markierung in aktueller Zeile oder lösche sie wenn vorhanden
+			del-doc = lösche alle Markierungen im aktuellen Dokument
+			del-all = lösche Markierungen in allen geöffneten Dokumenten
+		</marker>
 		<bookmark>
 			<goto>
 				1 = springe zum Lesezeichen Nummer 1
@@ -721,10 +741,15 @@
 		</bookmark>
 		<tool>
 			note = wechsle Fokus zum Notizblock
-			note-selection = füge Markierung an den Text im Notizblock
+			note-selection = füge Textauswahl im Notizblock ans dortige Textende an
 			interpreter-run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
-			interpreter-stop-document = halte Interpreterprozess des Oututpanels an
-			output-inc = zeige die @INC-Pfade im Ausgabepanel
+			interpreter-stop-document = halte Interpreterprozess des Ausgabepanels an
+			<output>
+				inc = zeige die @INC-Pfade des Perlinterpreters im Ausgabefenster
+				env = zeige die Umgebungsvariablen des Perlinterpreters im Ausgabefenster
+				selection-dec = gib Textauswahl in dezimaler Kodierung aus
+				selection-hex = gib Textauswahl in hexadezimaler Kodierung aus
+			</output>
 			choose-color = zeigt markierten Text als Farbe und ermöglicht neue Auswahl
 		</tool>
 		<document>
