--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -32,6 +32,7 @@
 			bookmark_goto = Gå til bokmerke
 			bookmark_toggle = bytt bokmerker
 			tools = Verktøy
+			tool_output = Ausgabe
 			document = Do&kument
 			document_change = Velg
 			document_convert = Konvertieren
@@ -259,6 +260,13 @@
 			last-edit = Zur letzten Bearbeitung
 			line = Gehe Zu Zeile ...
 		</goto>
+		<marker>
+			goto-prev = Goto Previous Marker
+			goto-next = Goto Next Marker
+			toggle-here = Toggle Marker Here
+			del-doc = Delete Marker in Doc
+			del-all = Delete All Marker
+		</marker>
 		<bookmark>
 			<goto>
 				1 = 1
@@ -288,11 +296,16 @@
 		</bookmark>
 		<tool>
 			note = Notiere
-			note-selection = Notiere Markierung
+			note-selection = Notiere Auswahl
 			interpreter-run-document = Start
 			interpreter-stop-document = Stop
-			output-inc = @INC
-			choose-color = Color Picker
+			<output>
+				inc = @INC
+				env = %ENV
+				selection-dec = Auswahl in Dez
+				selection-hex = Auswahl in Hex
+			</output>
+			choose-color = Farbauswahl
 		</tool>
 		<document>
 			auto-indention = Autoeinrückung
@@ -692,6 +705,13 @@
 			last-edit = springe zur Position der letzten Veränderung dieses Dokumentes
 			line = springe zur Zeile mit angegeben Nummer
 		</goto>
+		<marker>
+			goto-prev = springe zur vorigen Markierung (nach oben) in diesem Dokument
+			goto-next = springe zur nächsten Markierung (nach unten) in diesem Dokument
+			toggle-here = setze Markierung in aktueller Zeile oder lösche sie wenn vorhanden
+			del-doc = lösche alle Markierungen im aktuellen Dokument
+			del-all = lösche Markierungen in allen geöffneten Dokumenten
+		</marker>
 		<bookmark>
 			<goto>
 				1 = springe zum Lesezeichen Nummer 1
@@ -721,11 +741,16 @@
 		</bookmark>
 		<tool>
 			note = wechsle Fokus zum Notizblock
-			note-selection = füge Markierung an den Text im Notizblock
+			note-selection = füge Textauswahl im Notizblock ans dortige Textende an
 			interpreter-run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
-			interpreter-stop-document = halte Interpreterprozess des Oututpanels an
-			output-inc = zeige die @INC-Pfade im Ausgabepanel
-			choose-color = display text selection as color and choose a new from a rainbow
+			interpreter-stop-document = halte Interpreterprozess des Ausgabepanels an
+			<output>
+				inc = zeige die @INC-Pfade des Perlinterpreters im Ausgabefenster
+				env = zeige die Umgebungsvariablen des Perlinterpreters im Ausgabefenster
+				selection-dec = gib Textauswahl in dezimaler Kodierung aus
+				selection-hex = gib Textauswahl in hexadezimaler Kodierung aus
+			</output>
+			choose-color = zeigt markierten Text als Farbe und ermöglicht neue Auswahl
 		</tool>
 		<document>
 			auto-indention = rückt bei Enter neue Zeilen wie vorige ein
