Import of LICHTKIND/Kephra-0.4.2_18 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_18
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_18.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/appbars.yml
+++ b/share/config/interface/appbars.yml
@@ -34,8 +34,8 @@ searchbar:
  -
  - item goto-last-edit
  -
- - item marker-goto-prev
- - item marker-goto-next
+ - item marker-goto-prev-all
+ - item marker-goto-next-all
  -
  - item goto-line
  - item view-dialog-find
