--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -174,6 +174,15 @@
 			last-edit = Kephra::Edit::Goto::last_edit()
 			line = Kephra::Edit::Goto::line()
 		</goto>
+		<marker>
+			goto-prev-doc = Kephra::Edit::Marker::goto_prev_marker_in_doc()
+			goto-next-doc = Kephra::Edit::Marker::goto_next_marker_in_doc()
+			goto-prev-all = Kephra::Edit::Marker::goto_prev_marker()
+			goto-next-all = Kephra::Edit::Marker::goto_next_marker()
+			toggle-here = &Kephra::Edit::Marker::toggle_marker
+			delete-doc = Kephra::Edit::Marker::delete_all_marker_in_doc()
+			delete-all = Kephra::Edit::Marker::delete_all_marker()
+		</marker>
 		<bookmark>
 			<goto>
 				1 = Kephra::Edit::Marker::goto_bookmark(1)
@@ -199,15 +208,9 @@
 				9 = Kephra::Edit::Marker::toggle_bookmark(9)
 				0 = Kephra::Edit::Marker::toggle_bookmark(0)
 			</toggle>
+			delete-doc = Kephra::Edit::Marker::delete_all_bookmarks_in_doc()
 			delete-all = Kephra::Edit::Marker::delete_all_bookmarks()
 		</bookmark>
-		<marker>
-			goto-prev = Kephra::Edit::Marker::goto_prev_marker()
-			goto-next = Kephra::Edit::Marker::goto_next_marker()
-			toggle-here = Kephra::Edit::Marker::toggle_marker()
-			del-doc = Kephra::Edit::Marker::delete_all_marker_in_doc()
-			del-all = Kephra::Edit::Marker::delete_all_marker()
-		</marker>
 		<tool>
 			note = Kephra::App::Panel::Notepad::note()
 			note-selection = Kephra::App::Panel::Notepad::append_selection()
@@ -356,10 +359,10 @@
 					</text>
 				</margin>
 				<fold-toggle>
-					all = Kephra::App::EditPanel::Margin::toggle_all()
-					here = Kephra::App::EditPanel::Margin::toggle_here()
-					recursively = Kephra::App::EditPanel::Margin::toggle_recursively()
-					siblings = Kephra::App::EditPanel::Margin::toggle_siblings()
+					all = Kephra::App::EditPanel::Fold::toggle_all()
+					here = Kephra::App::EditPanel::Fold::toggle_here()
+					recursively = Kephra::App::EditPanel::Fold::toggle_recursively()
+					siblings = Kephra::App::EditPanel::Fold::toggle_siblings()
 				</fold-toggle>
 			</editpanel>
 			<panel>
@@ -732,8 +735,8 @@
 			line = goto-line.xpm
 		</goto>
 		<marker>
-			goto-prev = find-previous.xpm
-			goto-next = find-next.xpm
+			goto-prev-all = find-previous.xpm
+			goto-next-all = find-next.xpm
 		</marker>
 		<bookmark>
 			<goto>
@@ -882,10 +885,13 @@
 			line = ctrl+g
 		</goto>
 		<marker>
-			goto-prev = ctrl+shift+m
-			goto-next = ctrl+m
-			toggle-here = ctrl+alt+m
-			del-doc = ctrl+alt+shift+m
+			goto-prev-doc = shift+f2
+			goto-next-doc = f2
+			goto-prev-all = alt+shift+f2
+			goto-next-all = alt+f2
+			toggle-here = ctrl+f2
+			delete-doc = ctrl+shift+f2
+			delete-all = ctrl+alt+shift+f2
 		</marker>
 		<bookmark>
 			<goto>
@@ -918,6 +924,7 @@
 			note-selection = shift+f4
 			interpreter-run-document = f5
 			interpreter-stop-document = shift+f5
+			output-selection-dec = ctrl+shift+f5
 		</tool>
 		<document>
 			<change>
