--- a/share/config/localisation/cesky.conf
+++ b/share/config/localisation/cesky.conf
@@ -29,6 +29,7 @@
 			search_attributes = Attributes
 			find_functions = Find Functions
 			replace_functions = Replace Functions
+			marker = Marker
 			bookmark_goto = Goto Bookmark
 			bookmark_toggle = Toggle Bookmark
 			tools = Tools
@@ -261,11 +262,13 @@
 			line = Goto Line Number  ...
 		</goto>
 		<marker>
-			goto-prev = Goto Previous Marker
-			goto-next = Goto Next Marker
+			goto-prev-doc = Previous Marker in Doc
+			goto-next-doc = Next Marker in Doc
+			goto-prev-all = Goto Previous Marker
+			goto-next-all = Goto Next Marker
 			toggle-here = Toggle Marker Here
-			del-doc = Delete Marker in Doc
-			del-all = Delete All Marker
+			delete-doc = Delete Marker in Doc
+			delete-all = Delete All Marker
 		</marker>
 		<bookmark>
 			<goto>
@@ -292,7 +295,8 @@
 				9 = 9
 				0 = O
 			</toggle>
-			delete-all = Delete Bookmarks
+			delete-doc = Delete Doc Bookmarks
+			delete-all = Delete All Bookmarks
 		</bookmark>
 		<tool>
 			note = Note
@@ -706,11 +710,13 @@
 			line = jump to line with chosen number
 		</goto>
 		<marker>
-			goto-prev = go to the previous marker (upwards) in this document
-			goto-next = go to the next marker (downwards) in this document
+			goto-prev-doc = go to the previous marker (upwards) in this document
+			goto-next-doc = go to the next marker (downwards) in this document
+			goto-prev-all = go to the previous marker here or in some previous document
+			goto-next-all = go to the next marker here or in some next document
 			toggle-here = set a marker in current line or delete if already present
-			del-doc = delete marker just in the current document
-			del-all = delete marker in all open documents
+			delete-doc = delete marker just in the current document
+			delete-all = delete marker in all open documents
 		</marker>
 		<bookmark>
 			<goto>
@@ -737,7 +743,8 @@
 				9 = set here or remove (if present) bookmark 9
 				0 = set here or remove (if present) bookmark 0
 			</toggle>
-			delete-all = delete all bookmarks
+			delete-doc = delete bookmarks in the current document
+			delete-all = delete bookmarks in all documents
 		</bookmark>
 		<tool>
 			note = jump to the notepad
