--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -29,6 +29,7 @@
 			search_attributes = Eigenschaften
 			find_functions = Suchfunktionen
 			replace_functions = Ersetzfunktionen
+			marker = Markierungen
 			bookmark_goto = Gehe Zu Lesezeichen
 			bookmark_toggle = Lesezeichen Umschalten
 			tools = Werkzeuge
@@ -261,11 +262,13 @@
 			line = Gehe Zu Zeile ...
 		</goto>
 		<marker>
-			goto-prev = Vorige Markierung
-			goto-next = Nächste Markierung
+			goto-prev-doc = Vorige Markierung im Dok
+			goto-next-doc = Nächste Markierung im Dok
+			goto-prev-all = Vorige Markierung
+			goto-next-all = Nächste Markierung
 			toggle-here = Markierung Umschalten
-			del-doc = Lösche im Dokument
-			del-all = Lösche Alle Markierungen
+			delete-doc = Lösche im Dokument
+			delete-all = Lösche Alle Markierungen
 		</marker>
 		<bookmark>
 			<goto>
@@ -292,7 +295,8 @@
 				9 = 9
 				0 = O
 			</toggle>
-			delete-all = Lösche Lesezeichen
+			delete-doc = Lösche Lesezeichen im Dok
+			delete-all = Lösche Alle Lesezeichen
 		</bookmark>
 		<tool>
 			note = Notiere
@@ -706,11 +710,13 @@
 			line = springe zur Zeile mit angegeben Nummer
 		</goto>
 		<marker>
-			goto-prev = springe zur vorigen Markierung (nach oben) in diesem Dokument
-			goto-next = springe zur nächsten Markierung (nach unten) in diesem Dokument
+			goto-prev-doc = springe zur vorigen Markierung (nach oben) in diesem Dokument
+			goto-next-doc = springe zur nächsten Markierung (nach unten) in diesem Dokument
+			goto-prev-all = springe zur vorigen Markierung (nach oben), sucht in allen Dokumenten
+			goto-next-all = springe zur nächsten Markierung (nach unten), sucht in allen Dokumenten
 			toggle-here = setze Markierung in aktueller Zeile oder lösche sie wenn vorhanden
-			del-doc = lösche alle Markierungen im aktuellen Dokument
-			del-all = lösche Markierungen in allen geöffneten Dokumenten
+			delete-doc = lösche alle Markierungen im aktuellen Dokument
+			delete-all = lösche Markierungen in allen geöffneten Dokumenten
 		</marker>
 		<bookmark>
 			<goto>
@@ -737,7 +743,8 @@
 				9 = setze hier oder lösche, wenn anwesend Nr 9
 				0 = setze hier oder lösche, wenn anwesend Nr 0
 			</toggle>
-			delete-all = lösche alle Lesezeichen
+			delete-doc = lösche alle Lesezeichen im aktuellen Dokument
+			delete-all = lösche alle Lesezeichen in allen Dokumenten
 		</bookmark>
 		<tool>
 			note = wechsle Fokus zum Notizblock
@@ -828,7 +835,7 @@
 			<tabs>
 				hard = füge einen Tab ein wenn Tab-Taste gedrückt wird
 				soft = füge mehrere Leerzeichen statt eines Tabs ein
-				use = benutze Tabulatoren (hard tabs) oder Leerzeichen
+				use = benutze Tabulatoren (hard tabs) oder Leerzeichen (soft tabs)
 				<width>
 					1 = Breite der Tabs entspreche 1 Buchstaben
 					2 = Breite der Tabs entspreche 2 Buchstaben
