--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -29,6 +29,7 @@
 			search_attributes = Egenskaper
 			find_functions = Søkefunksjoner
 			replace_functions = Erstattningsfunksjoner
+			marker = Markierungen
 			bookmark_goto = Gå til bokmerke
 			bookmark_toggle = bytt bokmerker
 			tools = Verktøy
@@ -83,13 +84,13 @@
 			time = tid
 		</label>
 		<help>
-			cursor = caret (text cursor) position
-			selection = selection size or position in percentage
-			syntaxmode = changes the current set syntaxmode
-			codepage = encoding settings
-			tab = change the use of tabs and spaces
-			EOL = view or change the end of line character
-			message = info field, can also show infos about the current file
+			cursor = Position des Caret (Textcursor)
+			selection = Größe der Textauswahl oder prozentuale Position
+			syntaxmode = ändert den gewählten Syntaxmodus
+			codepage = Einstellungen der Kodierung
+			tab = Benutzung und Sichtbarkeit von Tabulatoren (HT) und Leerzeichen (ST)
+			EOL = Änderung und Sichtbarkeit von der Zeilenendzeichen
+			message = Nachrichtenfeld, auch verschiedene Informationen zum Dokument
 		</help>
 	</status>
 </app>
@@ -261,11 +262,13 @@
 			line = Gehe Zu Zeile ...
 		</goto>
 		<marker>
-			goto-prev = Goto Previous Marker
-			goto-next = Goto Next Marker
-			toggle-here = Toggle Marker Here
-			del-doc = Delete Marker in Doc
-			del-all = Delete All Marker
+			goto-prev-doc = Vorige Markierung im Dok
+			goto-next-doc = Nächste Markierung im Dok
+			goto-prev-all = Vorige Markierung
+			goto-next-all = Nächste Markierung
+			toggle-here = Markierung Umschalten
+			delete-doc = Lösche im Dokument
+			delete-all = Lösche Alle Markierungen
 		</marker>
 		<bookmark>
 			<goto>
@@ -292,7 +295,8 @@
 				9 = 9
 				0 = O
 			</toggle>
-			delete-all = Lösche Lesezeichen
+			delete-doc = Lösche Lesezeichen im Dok
+			delete-all = Lösche Alle Lesezeichen
 		</bookmark>
 		<tool>
 			note = Notiere
@@ -706,11 +710,13 @@
 			line = springe zur Zeile mit angegeben Nummer
 		</goto>
 		<marker>
-			goto-prev = springe zur vorigen Markierung (nach oben) in diesem Dokument
-			goto-next = springe zur nächsten Markierung (nach unten) in diesem Dokument
+			goto-prev-doc = springe zur vorigen Markierung (nach oben) in diesem Dokument
+			goto-next-doc = springe zur nächsten Markierung (nach unten) in diesem Dokument
+			goto-prev-all = springe zur vorigen Markierung (nach oben), sucht in allen Dokumenten
+			goto-next-all = springe zur nächsten Markierung (nach unten), sucht in allen Dokumenten
 			toggle-here = setze Markierung in aktueller Zeile oder lösche sie wenn vorhanden
-			del-doc = lösche alle Markierungen im aktuellen Dokument
-			del-all = lösche Markierungen in allen geöffneten Dokumenten
+			delete-doc = lösche alle Markierungen im aktuellen Dokument
+			delete-all = lösche Markierungen in allen geöffneten Dokumenten
 		</marker>
 		<bookmark>
 			<goto>
@@ -737,7 +743,8 @@
 				9 = setze hier oder lösche, wenn anwesend Nr 9
 				0 = setze hier oder lösche, wenn anwesend Nr 0
 			</toggle>
-			delete-all = lösche alle Lesezeichen
+			delete-doc = lösche alle Lesezeichen im aktuellen Dokument
+			delete-all = lösche alle Lesezeichen in allen Dokumenten
 		</bookmark>
 		<tool>
 			note = wechsle Fokus zum Notizblock
