--- a/share/config/interface/contextmenus.yml
+++ b/share/config/interface/contextmenus.yml
@@ -28,6 +28,68 @@ textselection_contextmenu:
  - item edit-selection-convert-uppercase
  - item edit-selection-convert-lowercase
 
+markermargin_contextmenu:
+ - item goto-line
+ -
+ -
+  menu marker:
+    - item marker-toggle-here
+    - item marker-goto-prev-doc
+    - item marker-goto-next-doc
+    - item marker-goto-prev-all
+    - item marker-goto-next-all
+    - item marker-delete-doc
+    - item marker-delete-all
+ -
+ -
+   menu bookmark_toggle:
+     - item bookmark-toggle-1
+     - item bookmark-toggle-2
+     - item bookmark-toggle-3
+     - item bookmark-toggle-4
+     - item bookmark-toggle-5
+     - item bookmark-toggle-6
+     - item bookmark-toggle-7
+     - item bookmark-toggle-8
+     - item bookmark-toggle-9
+     - item bookmark-toggle-0
+ -
+   menu bookmark_goto:
+     - item bookmark-goto-1
+     - item bookmark-goto-2
+     - item bookmark-goto-3
+     - item bookmark-goto-4
+     - item bookmark-goto-5
+     - item bookmark-goto-6
+     - item bookmark-goto-7
+     - item bookmark-goto-8
+     - item bookmark-goto-9
+     - item bookmark-goto-0
+ - item bookmark-delete-doc
+ - item bookmark-delete-all
+ -
+ -
+   menu view_text_fold:
+     - item view-editpanel-fold-toggle-here
+     - item view-editpanel-fold-toggle-recursively
+     - item view-editpanel-fold-toggle-siblings
+     - item view-editpanel-fold-toggle-all
+ -
+ - checkitem view-editpanel-margin-marker
+ - checkitem view-editpanel-margin-line-number
+ - checkitem view-editpanel-margin-text-fold
+ -
+   menu view_textmargin:
+          - radioitem view-editpanel-margin-text-0
+          - radioitem view-editpanel-margin-text-1
+          - radioitem view-editpanel-margin-text-2
+          - radioitem view-editpanel-margin-text-3
+          - radioitem view-editpanel-margin-text-4
+          - radioitem view-editpanel-margin-text-6
+          - radioitem view-editpanel-margin-text-8
+          - radioitem view-editpanel-margin-text-10
+          - radioitem view-editpanel-margin-text-12
+
 searchbar_contextmenu:
  - checkitem search-attribute-incremental-switch
  - checkitem search-attribute-autowrap-switch
@@ -53,30 +115,30 @@ status_syntaxstyle_contextmenu:
  -
  - item document-syntaxmode-auto
  - checkitem document-syntaxmode-none
- 
+
 status_whitespace_contextmenu:
  - checkitem document-auto-indention
  - checkitem document-brace-indention
  -
  - checkitem view-editpanel-whitespace
  -
-    menu document_tab_width:
-      - radioitem document-tabs-width-1
-      - radioitem document-tabs-width-2
-      - radioitem document-tabs-width-3
-      - radioitem document-tabs-width-4
-      - radioitem document-tabs-width-5
-      - radioitem document-tabs-width-6
-      - radioitem document-tabs-width-8
+   menu document_tab_width:
+     - radioitem document-tabs-width-1
+     - radioitem document-tabs-width-2
+     - radioitem document-tabs-width-3
+     - radioitem document-tabs-width-4
+     - radioitem document-tabs-width-5
+     - radioitem document-tabs-width-6
+     - radioitem document-tabs-width-8
  -
-    menu document_convert:
-      - item edit-document-convert-tabs2spaces
-      - item edit-document-convert-spaces2tabs
-      -
-      - item edit-document-convert-indent2spaces
-      - item edit-document-convert-indent2tabs
-      -
-      - item edit-document-format-del-trailing-whitespace
+   menu document_convert:
+     - item edit-document-convert-tabs2spaces
+     - item edit-document-convert-spaces2tabs
+     -
+     - item edit-document-convert-indent2spaces
+     - item edit-document-convert-indent2tabs
+     -
+     - item edit-document-format-del-trailing-whitespace
  -
  - radioitem document-tabs-soft
  - radioitem document-tabs-hard
